# Distributed-Compute-Coin

./: .gitignore  CODE_OF_CONDUCT.md  FileSharing.md  LICENSE  README.md  blockchaingoal.txt  tags  tags.temp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  codeql-analysis.yml
Blockchain Client/: Blockchain Client.csproj  Blockchain Client.sln  client.cs
Blockchain Client/blockchain/: block1.txt  block10.txt  block2.txt  block3.txt  block4.txt  block5.txt  block6.txt  block7.txt  block8.txt  block9.txt
Blockchain Miner/: Miner.sln  miner.cs
Blockchain Miner/blockchain/: block1.txt  block2.txt  block3.txt  block4.txt  block5.txt  block6.txt  block7.txt
Blockchain Miner/pendingblocks/: block11.txt  block13.txt  block4.txt  block6.txt  block7.txt  block8.txt  block9.txt
Blockchain Server/: Blockchain Server.csproj  Blockchain.sln  server.cs
Blockchain Server/blockchain/: block1.txt  block2.txt  block3.txt  block4.txt  block5.txt  block7.txt  block8.txt
Blockchain Server/pendingblocks/: block10.txt  block12.txt  block2.txt  block9.txt
BlockchainClient/: client.cs
BlockchainClient/blockchain/: block11.txt  block3.txt
BlockchainMiner/: BlockchainMiner.csproj  BlockchainMiner.sln  BlockchainUpgrader.cs  ConsoleProgress.cs  ExtensionMethods.cs  InternetTime.cs  P2P.cs  PHPServ.cs  Receiver.cs  Sender.cs  SizeConverter.cs  StunClient.cs  miner.cs
BlockchainMiner/blockchain/: block1.txt  block2.txt  block3.txt  block4.txt  block5.txt  block6.txt
BlockchainMiner/pendingblocks/: block7.txt
BlockchainServer/: server.cs
BlockchainServer/pendingblocks/: block2.txt  block4.txt  block5.txt  block6.txt  block7.txt
ClientCSForm/: ClientCSForm.csproj  ClientCSForm.sln  DCC Client Wallet.csproj  DCC Client Wallet.sln  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  client.cs  config.txt  http.cs  packages.config
ClientCSForm/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ClientCSForm/blockchain/: block1.txt  block2.txt  block3.txt  block4.txt  block5.txt  block6.txt  block8.txt
ClientCSForm/wwwdata/: minelevel.txt
ClientCSForm/wwwdata/blockchain/: block1.txt  block17.txt  block2.txt  block3.txt
ClientCSForm/wwwdata/pendingblockchain/: block18.txt
ColdWallet/: BlockchainUpgrader.cs  ColdWallet.csproj  ColdWallet.sln  DCC Cold Wallet.csproj  DCC Cold Wallet.sln  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  client.cs  http.cs  packages.config
ColdWallet/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ColdWallet/wwwdata/: index.php
ColdWallet/wwwdata/blockchain/: block13.txt  block4.txt  block7.txt
DCC-Miner/: CMakeLists.txt  run.sh
DCC-Miner/DCC-Miner/: BaseConverter.cpp  BlockUpgrader.cpp  Blockchain.cpp  Blockchain.h  CMakeLists.txt  Console.cpp  Console.h  FileManip.cpp  FileManip.h  Main.cpp  Main.h  Miner.cpp  Miner.h  Network.cpp  Network.h  P2PClient.cpp  P2PClient.h  RequestParser.cpp  RequestParser.h  Session.vim  SettingsConsts.h  System.cpp  System.h  crypto.cpp  crypto.h  deterministicRandEngine.cpp  json.hpp  randEngine.c  strops.cpp  strops.h  uint256.h
DCC-Miner/DCC-Miner/curl/lib/: libcurl_a.lib
DCC-Miner/DCC-Miner/extlibs/elzip/: elzip.hpp
Other/Distributed-Compute-Coin-Installer/: Distributed-Compute-Coin-Installer.sln
Other/Distributed-Compute-Coin-Installer/Distributed-Compute-Coin-Installer/: Distributed-Compute-Coin-Installer.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
Other/Distributed-Compute-Coin-Installer/Distributed-Compute-Coin-Installer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Other/Redundant/BlockchainServer/: server.cs
Redundant/BlockchainClient/: BlockchainClient.sln
Redundant/BlockchainClient/blockchain/: block10.txt
Redundant/BlockchainServer/: BlockchainServer.sln
Redundant/BlockchainServer/pendingblocks/: block3.txt
cppClient/: config.txt  cppClient.cpp  cppClient.sln  cppClient.vcxproj  cppClient.vcxproj.filters
cppClient/Debug/: cppClient.exe.recipe  cppClient.ilk  cppClient.vcxproj.FileListAbsolute.txt  vc142.idb
cppClient/Debug/cppClient.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cppClient.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cppClient/blockchain/: block0.txt  block1.txt  block12.txt  block2.txt  block3.txt  block4.txt  block5.txt  block6.txt  block7.txt
dcc_client/: CMakeLists.txt  DCC-Logo.psd  DCC-Logo2.psd  run.sh
dcc_client/dcc_client/: BaseConverter.cpp  BaseConverter.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  Console.cpp  Console.h  DCC-Logo.rc  FileManip.cpp  FileManip.h  Main.cpp  Main.h  Miner.cpp  Miner.h  Network.cpp  Network.h  P2PClient.cpp  P2PClient.h  RequestParser.cpp  RequestParser.h  Session.vim  SettingsConsts.cpp  SettingsConsts.h  System.cpp  System.h  benchmark.cpp  benchmark.h  crypto.cpp  crypto.h  deterministicRandEngine.cpp  indicators.hpp  json.hpp  resource.h  strops.cpp  strops.h  uint128.h  uint128.inl  uint256.h  uint256.inl
dcc_client/dcc_client/include/curl/: curl.h  curlver.h  header.h  options.h  system.h
dcc_client/out-linux/: CMakeCache.txt  Makefile  Session.vim  cmake_install.cmake
dcc_client/out-linux/dcc_client/: Makefile  cmake_install.cmake  dcc_client
dcc_client/out-linux/dcc_client/wwwdata/developing-containers/TestContainer/: Containerfile
dcc_client/out-linux/wwwdata/: peerlist.listsave
